--- a/cadastro/home.html
+++ b/cadastro/home.html
@@ -175,25 +175,10 @@
 
 <script>
   
-  var proximoId = 3;
-
-  var objeto1 = {
-  id: 1,
-  nome: "pedro",
-  produtos: "coxinha",
-  valor: "2.50",
-  predio: "4",
-  sala: "100",
-  situacao: "Entregue"
-};
-
-var objeto2 = {
-  id: 2,
-  nome: "Maria",
-  produtos: "Energético Energy Monster 473ml",
-valor: "11.90",
-  predio: "4",
-  sala: 202,
-  situacao: "Entregue"
-};
-
+  function adicionarLinha() {
+  
+    alert("Pedido Realizado com sucesso!!!");
+    alert("Quando o pedido tiver chegado pressione o botão");
+    alert("Bom Apetite " + nome +  " !!!\uD83C\uDF55 \uD83D\uDE04 ");
+  }
+</script>
